# doc/swagger.json
@@ -41,6 +41,17 @@
           "users"
         ],
         "parameters": [],
+        "requestBody": {
+          "description": "변경할 권한 정보를 포함",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/IUserUsecase.SetRoleBody"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "201": {
             "description": "아무것도 반환하지 않습니다."
@@ -108,6 +119,26 @@
           "id",
           "email",
           "username",
+          "permission"
+        ],
+        "x-typia_jsDocTags": []
+      },
+      "IUserUsecase.SetRoleBody": {
+        "type": "object",
+        "properties": {
+          "permission": {
+            "type": "string",
+            "enum": [
+              "Admin",
+              "Manager",
+              "Normal"
+            ],
+            "nullable": false,
+            "x-typia-required": true
+          }
+        },
+        "nullable": false,
+        "required": [
           "permission"
         ],
         "x-typia_jsDocTags": []
